<resources>
    <string name="app_name">My Application</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="registar">Registar</string>
    <string name="login">Login</string>
    <string name="login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="textviewregistarnome">Nome</string>
    <string name="textviewregistarapelido">Apelido</string>
    <string name="textviewregistartelemovel">Telemovel</string>
    <string name="textviewregistarcodpostal">Cod. Postal</string>
    <string name="textviewregistarmorada">Morada</string>
    <string name="textviewregistarnacionalidade">Nacionalidade</string>
    <string name="textviewregistargenero">Genero</string>
    <string name="textviewregistaremail">Email</string>
    <string name="textviewregistarpassword">Password</string>
    <string name="textviewregistarconfirmarpassword">Confirmar Password</string>
    <string name="buttonregistar">Registar</string>
</resources>